OLMIS-1344: fixed notifications on firefox
notifications where put on the bottom of the page instaed on the top

--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -155,3 +155,11 @@ select {
     @include transform(scale(0));
   }
 }
+
+.fadeIn {
+  @include animation(fade-in 500ms);
+}
+
+.fadeOut {
+  @include animation(fade-out 500ms);
+}
