--- a/src/main/webapp/public/common/notification.scss
+++ b/src/main/webapp/public/common/notification.scss
@@ -4,12 +4,13 @@
 	min-height: 80px;
 	display: flex;
 	align-items: center;
-    -webkit-animation: fade-in 500ms;
+	@extend .fadeIn;
 }
 
 .notification-container {
 	position: fixed;
 	right: 0px;
+	top: 0px;
 	z-index: 15;
 	padding: 2em;
 }
